--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/browserify src/index.js -o dist/assets/js/bundle.js -t [ babelify --presets [ react es2015 ] ]",
-    "start": "http-server dist -o -p 80"
+    "build": "node_modules/.bin/browserify src/index.js -o dist/assets/js/bundle.js -t [ babelify --presets [ react es2015 ] ]"
   },
   "author": "",
   "license": "",
